# RAG

./: README.md  compose.yaml  config.py  llm_service.py  main.py  pyproject.toml
api/: app.py  dependencies.py  schemas.py
api/routers/: documents.py  query.py  runtime.py
data/documents/ai/: transformer.txt
docker/: Dockerfile.rag  Dockerfile.vllm  vllm.env
rag/: document.py  document_manifest.py  index_bootstrap.py  indexing_service.py  metrics.py  rag_service.py  relevance.py  retrieval_pipeline.py  retrieval_runtime.py  runtime.py
rag/chunkers/: __init__.py  base.py  fixed_size.py  routing.py
rag/embeddings/: __init__.py  base.py  local.py  result.py
rag/generators/: __init__.py  base.py  llm.py  result.py
rag/loaders/: __init__.py  base.py  multi_format.py  pdf.py  text.py  text_loader.py
rag/prompts/: __init__.py  builder.py
rag/rerankers/: __init__.py  base.py  cross_encoder.py  noop.py
rag/retrievers/: __init__.py  base.py  bm25.py  dense.py  hybrid.py
rag/vector_stores/: __init__.py  base.py  faiss_store.py
scripts/: compose.sh  pytest_prefix.sh  up.sh
services/llm/: __init__.py  base.py  factory.py  ollama.py  vllm.py
tests/: concurrency_client.py  test_document.py  test_document_manifest.py  test_faiss_store.py  test_fixed_size_chunker.py  test_indexing_service.py  test_llm_answer_generator.py  test_loader.py  test_local_embedding.py  test_prompt_builder.py  test_rag_service.py
