[project]
name = "rag"
version = "0.1.0"
description = "RAG prototype"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "bm25s>=0.3.9",
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langgraph>=1.2.0",
    "numpy>=2.4.4",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "python-multipart>=0.0.28",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.5.0",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "schemathesis>=4.21.10",
]
